--- a/MandelbrotSet.xcodeproj/xcshareddata/xcschemes/MandelbrotSet.xcscheme
+++ b/MandelbrotSet.xcodeproj/xcshareddata/xcschemes/MandelbrotSet.xcscheme
@@ -34,7 +34,8 @@
       buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      launchStyle = "0"
+      debugAsWhichUser = "root"
+      launchStyle = "1"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
@@ -52,7 +53,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "500000"
+            argument = "21000"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
